addition of the changes for location
